[package]
name = "bwrap"
version = "1.2.3"
authors = ["Michael Lee <micl2e2@proton.me>"]
edition = "2021"
description = """A fast, lightweight, embedded systems-friendly library for
wrapping text."""
repository = "https://github.com/micl2e2/bwrap"
homepage = "https://github.com/micl2e2/bwrap"
documentation = "https://docs.rs/bwrap"
license = "MIT OR GPL-3.0-or-later"
keywords = ["no-std", "wrap", "line-feed", "80-column", "formatting"]
categories = ["no-std", "text-processing", "embedded", "accessibility"]
exclude = ["*.bak"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_std = []

[dependencies]
unicode-width = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]